Overflow fixed

--- a/src/app/pages/my-listings/my-listings.page.scss
+++ b/src/app/pages/my-listings/my-listings.page.scss
@@ -23,7 +23,7 @@
 
         display: flex;
         flex-direction: row;
-        height: 120px;
+        height: 150px;
         .tymbooker_image{
             height: 100px;
             width: 100px;
